chandeliers-lus/tests/fail/ui/tc/const/then.rs
chandeliers_lus::decl! {
    const X : int = 0 -> 1;
}

fn main() {}
