chandeliers-lus/tests/fail/ui/tc/const/then.stderr
error: Later is not valid in const contexts
 --> tests/fail/ui/tc/const/then.rs:2:21
  |
2 |     const X : int = 0 -> 1;
  |                     ^^^^^^
